--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -82,6 +82,8 @@ strong {
 #ui-center {
     background-color: $bcg-darkest;
     height: calc(100vh - 64px);
+    flex-grow: 1;
+    overflow: hidden;
     > .content {
         height: 100%;
     }
@@ -512,6 +514,12 @@ strong {
                     flex-grow: 0.3;
                 }
             }
+        }
+
+        > .ui-button {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         > .ui-button.option {
