--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -530,6 +530,80 @@ strong {
     }
 }
 
+.ui-overlay.picker-fuzzy-search {
+    z-index: 50;
+    > .overlay {
+        background-color: transparent;
+        cursor: default;
+    }
+    > .content {
+        display: none;
+    }
+}
+
+.ui-panel.picker-fuzzy-search {
+    position: absolute;
+    z-index: 51;
+    top: 28px;
+    left: calc(50% - 25vw) ;
+    width: 50vw;
+    height: 32px;
+    line-height: 32px;
+
+    > .content {
+        height: 100%;
+
+        > .ui-text-field {
+            width: 100%;
+            height: 32px;
+            line-height: 32px;
+            margin: 0;
+            padding: 0;
+
+            > input {
+                font-size: 14px;
+            }
+
+            &:hover, &.active, &:focus, &.focus {
+                background-color: $bcg-primary;
+            }
+        }
+
+        > .ui-menu {
+            position: absolute;
+            top: 100%;
+            left: 0;
+
+            > .inner {
+                position: absolute;
+                width: 100%;
+                max-height: 50vh;
+                overflow-y: auto;
+
+                -moz-box-shadow: 0 1px 1px 0px rgba(0,0,0,0.5);
+                -webkit-box-shadow: 0 1px 1px 0px rgba(0,0,0,0.5);
+                box-shadow: 0 1px 1px 0px rgba(0,0,0,0.5);
+
+                > .ui-menu-item {
+                    &:hover {
+                        > .title {
+                            background: transparent;
+                            color: $text-dark;
+                        }
+                    }
+
+                    &.selected {
+                        > .title {
+                            background: $text-darkest;
+                            color: $text-primary;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
 .ui-panel.whoisonline {
     flex-grow: 1;
     text-align: right;
