don't hide path color when selected

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -616,6 +616,10 @@ strong {
                         > .title {
                             background: $text-darkest;
                             color: $text-primary;
+
+                            .path {
+                                color: $bcg-darkest;
+                            }
                         }
                     }
                 }
