--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -994,7 +994,7 @@ strong {
         }
         &.field-strings {
             > .content > .ui-panel {
-                max-width: calc(100% - 89px);
+                // max-width: calc(100% - 77px);
 
                 &.disabled > .content {
                     > .tag {
@@ -1024,7 +1024,8 @@ strong {
                         padding: 0 24px 0 8px;
                         overflow: hidden;
                         text-overflow: ellipsis;
-                        white-space: nowrap;
+                        //white-space: nowrap;
+                        word-break: break-all;
                         background-color: $bcg-dark;
                         cursor: default;
 
@@ -1062,7 +1063,7 @@ strong {
                         }
                     }
                     > .ui-text-field {
-                        width: calc(100% - 27px);
+                        width: calc(100% - 26px);
                         margin: 1px 0 1px 1px;
                         flex-shrink: 0;
                         display: block;
@@ -1071,7 +1072,7 @@ strong {
                         margin: 1px 1px 1px 0;
                         border-left: none;
                         padding: 0;
-                        width: 22px;
+                        width: 24px;
                         line-height: 22px;
                         text-align: center;
                         @extend .font-icon;
@@ -1086,8 +1087,8 @@ strong {
         &.field-asset {
             > .content > .top > .controls > .ui-select-field {
                 float: right;
-                width: 32px;
-                height: 22px;
+                width: 48px;
+                height: 24px;
                 margin: 5px 3px 0 6px;
             }
             &.channel {
@@ -1095,11 +1096,11 @@ strong {
                     > .top {
                         > .ui-label {
                             float: left;
-                            width: calc(100% - 100px);
+                            width: calc(100% - 60px);
                         }
                         > .ui-select-field {
                             float: right;
-                            width: 32px;
+                            width: 48px;
                         }
                     }
                 }
@@ -1202,8 +1203,8 @@ strong {
                         }
                     }
                     > .ui-label {
-                        width: calc(100% - 44px);
-                        height: 22px;
+                        width: calc(100% - 6px);
+                        height: 24px;
                         line-height: 22px;
                         margin: 3px;
                         padding: 0 28px 0 8px;
@@ -1213,6 +1214,7 @@ strong {
                         font-size: 12px;
                         background-color: $bcg-dark;
                         border: 1px solid $bcg-darker;
+                        box-sizing: border-box;
                         cursor: pointer;
 
                         &:hover {
@@ -1561,6 +1563,8 @@ strong {
                 }
                 > .ui-checkbox.component-toggle {
                     float: right;
+                    width: 30px;
+                    height: 16px;
                     margin: 7px 4px 0 0;
                     background-color: $bcg-primary;
                 }
@@ -1635,8 +1639,8 @@ strong {
                 font-weight: bold;
                 text-align: center;
                 line-height: 24px;
-                width: 22px;
-                height: 22px;
+                width: 24px;
+                height: 24px;
                 padding: 0;
             }
         }
@@ -1647,8 +1651,8 @@ strong {
                         > .ui-button {
                             @extend .font-icon;
                             padding: 0;
-                            width: 20px;
-                            height: 20px;
+                            width: 22px;
+                            height: 22px;
                             line-height: 22px;
                             text-align: center;
 
@@ -1890,6 +1894,8 @@ strong {
                                 }
                                 > .ui-checkbox.component-toggle {
                                     float: right;
+                                    width: 30px;
+                                    height: 16px;
                                     margin: 7px 4px 0 0;
                                     background-color: $bcg-primary;
                                 }
@@ -2204,7 +2210,7 @@ strong {
                 height: 28px;
                 line-height: 30px;
                 padding-left: 28px;
-                width: calc(100% - 36px);
+                width: 100%;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
@@ -2479,8 +2485,8 @@ strong {
 }
 
 .ui-checkbox.tick {
-    width: 12px;
-    height: 12px;
+    width: 14px;
+    height: 14px;
     overflow: hidden;
     // border-width: 2px;
 
@@ -2574,7 +2580,7 @@ strong {
     > .ui-text-field.search {
         margin: 0;
         width: 100%;
-        height: 24px;
+        height: 26px;
         border: none;
         border-top: 1px solid $bcg-primary;
         background-color: $bcg-darker;
@@ -3462,8 +3468,7 @@ strong {
     top: 2px;
     right: 109px;
     margin: 2px 0;
-
-    height: 31px;
+    height: 33px;
     line-height: 33px;
     padding: 0px 10px;
 
@@ -5430,9 +5435,10 @@ strong {
             position: relative;
             display: none;
             float: left;
-            width: 144px;
-            height: 144px;
+            width: 146px;
+            height: 146px;
             border: 1px solid #000;
+            box-sizing: border-box;
             margin: 8px 0 8px 8px;
             background-color: #f00;
             cursor: crosshair;
@@ -5481,10 +5487,11 @@ strong {
             position: relative;
             display: none;
             float: left;
-            width: 12px;
-            height: 144px;
+            width: 14px;
+            height: 146px;
             margin: 8px 0 8px 8px;
             border: 1px solid #000;
+            box-sizing: border-box;
             cursor: crosshair;
 
             background: #000;
@@ -5588,7 +5595,7 @@ strong {
 
             > .field {
                 display: none;
-                width: calc(106px - 10px);
+                width: calc(106px - 6px);
             }
         }
     }
@@ -6296,7 +6303,7 @@ strong {
 
         .ui-text-field.input-field {
             margin: 0;
-            height: 34px;
+            height: 36px;
             line-height: 34px;
             width: 100%;
             display: block;
@@ -6392,24 +6399,20 @@ strong {
                 padding-right: 10px;
                 padding-left: 20px;
             }
-
             &:not(.disabled):hover:before {
                 color: $text-active;
             }
-
             &.publish, &.publish-fb {
-                padding-left: 130px;
-                width: calc(100% - 160px);
+                text-align: center;
+                width: calc(100% - 30px);
 
                 &:before {
                     content: '\E226';
                 }
             }
-
             &.publish-fb {
                 display: none;
             }
-
             &.web-download, &.ios-download {
                 display: none;
                 width: 187px;
