Added Rename context menu option in tree view

--- a/editor/sass/code-editor-v2/theme-dark.scss
+++ b/editor/sass/code-editor-v2/theme-dark.scss
@@ -218,6 +218,11 @@ a:visited {
                 }
             }
         }
+        &.rename {
+            > .title {
+                background-color: $bcg-darkest;
+            }
+        }
         &.container {
             > .title {
                 &:hover {
