Open new file selection in the same tab unless you change that tab or you double click it on the files panel

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -195,6 +195,12 @@ strong {
             color: $bright-red;
         }
 
+        &.temporary {
+            > .content > .ui-panel.name {
+                font-style: italic;
+            }
+        }
+
         > .content {
             > .ui-panel.name {
                 overflow: hidden;
