Hide find-in-files highlights when we are searching with the results tab

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -1044,6 +1044,12 @@ a.link-docs {
     border: 1px solid white;
 }
 
+.hide-find-in-files {
+    .search-results-match {
+        border-color: transparent;
+    }
+}
+
 .invisible {
     visibility: hidden;
 }
