--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -310,6 +310,7 @@ strong {
                 }
                 > .ui-text-field {
                     width: calc(100% - 24px);
+                    height: 22px;
                     margin: 0;
                     padding: 0;
                     border: none;
