Fix next / prev buttons in search picker

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -639,6 +639,10 @@ strong {
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+
+            &.icon {
+                @extend .font-icon;
+            }
         }
 
         > .ui-button.option {
