launcher profiler close button and camera skip frames feature

--- a/editor/sass/launch.scss
+++ b/editor/sass/launch.scss
@@ -252,7 +252,7 @@ body > #dev-tools {
                         margin-right: 4px;
                     }
                 }
-                > .framesSkipButton {
+                > .drawcallsLimitButton {
                     float: left;
                     width: 24px;
                     height: 24px;
