fix inspector tabs with zoom

--- a/editor/sass/editor.scss
+++ b/editor/sass/editor.scss
@@ -1035,6 +1035,8 @@ strong {
                         }
                     }
                     > .ui-panel.tags {
+                        margin-top: 1px;
+
                         &.disabled > .content {
                             > .tag {
                                 opacity: .5;
